--- a/arch/arm64/boot/dts/broadcom/stingray/stingray-dmc.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray-dmc.dtsi
@@ -11,6 +11,7 @@
 			compatible = "arm,dmc-520";
 			reg = <0x200000 0x80000>;
 			interrupts = <0x0 0x347 0x4>, <0x0 0x34B 0x4>;
+			interrupt-mask = <0xC>;
 		};
 
 #if (ENABLE_DMC1 == 1)
@@ -18,6 +19,7 @@
 			compatible = "arm,dmc-520";
 			reg = <0x280000 0x80000>;
 			interrupts = <0x0 0x365 0x4>, <0x0 0x369 0x4>;
+			interrupt-mask = <0xC>;
 		};
 #endif
 
@@ -26,6 +28,7 @@
 			compatible = "arm,dmc-520";
 			reg = <0x300000 0x80000>;
 			interrupts = <0x0 0x383 0x4>, <0x0 0x387 0x4>;
+			interrupt-mask = <0xC>;
 		};
 #endif
 	};
