arm64/dts: copy Broadcom's 4.20 DTS files for stingray
TAG_MSFT: overlake

Signed-off-by: Pavel Tatashin <pasha.tatashin@soleen.com>

--- a/arch/arm64/boot/dts/broadcom/stingray/Makefile
+++ b/arch/arm64/boot/dts/broadcom/stingray/Makefile
@@ -1,5 +1,35 @@
 # SPDX-License-Identifier: GPL-2.0
-dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k.dtb
-dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm957604k.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm957604k-diag.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm957604k-optee.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm957604k-paxb-iommu.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm957604k-pcie-iommu.dtb
 
-dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958802a802x.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958732t.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958732t-optee.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k-diag.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k-optee.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k-paxb-iommu.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742k-pcie-iommu.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t-diag.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t-ns3.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t-optee.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t-paxb-iommu.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958742t-pcie-iommu.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958802a8023.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958802a804x.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958804a8040.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958804a8040-diag.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958804a8040-paxb-iommu.dtb
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958804a8040-pcie-iommu.dtb
+
+dtb-$(CONFIG_ARCH_BCM_IPROC) += bcm958804a8042.dtb
+
+subdir-y	:= custom emulator
