--- a/arch/arm64/boot/dts/broadcom/stingray/bcm958804a8040.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray/bcm958804a8040.dts
@@ -35,83 +35,26 @@
 #define NUM_CRYPTO	32
 #define NUM_RAID	8
 #define ENABLE_I2C0	1
-#define NUM_SATA	8
-
-#include "bcm958742-base.dtsi"
+#define ENABLE_USB1	0
 
 / {
-	model = "Stingray SST100 (BCM958742T)";
+	model = "Stingray PS1100R (BCM958804A8040)";
 };
 
-&i2c0 {
-	pca9505: pca9505@20 {
-		interrupts = <111 1 1>;
-	};
+#include "stingray-board-base.dtsi"
+
+&sdio0 {
+	no-1-8-v;
 };
 
 &gphy0 {
-	enet-phy-lane-swap;
+	reg = <0x0>;
 };
 
-&sdio0 {
-	mmc-ddr-1_8v;
-};
-
-&pcie0 {
-	msi-map = <0x0000 &gic_its 0x0000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0000 0x3ff>;
-#endif
-};
-
-&pcie1 {
-        msi-map = <0x0000 &gic_its 0x0400 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0400 0x3ff>;
-#endif
-};
-
-&pcie2 {
-        msi-map = <0x0000 &gic_its 0x0800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0800 0x3ff>;
-#endif
-};
-
-&pcie3 {
-        msi-map = <0x0000 &gic_its 0x0c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0c00 0x3ff>;
-#endif
-};
-
-&pcie4 {
-
-        msi-map = <0x0000 &gic_its 0x1000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1000 0x3ff>;
-#endif
-};
-&pcie5 {
-
-        msi-map = <0x0000 &gic_its 0x1400 0x3ff>;
-
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1400 0x3ff>;
-#endif
-};
-&pcie6 {
-
-        msi-map = <0x0000 &gic_its 0x1800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1800 0x3ff>;
-#endif
-};
-
-&pcie7 {
-
-        msi-map = <0x0000 &gic_its 0x1c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1c00 0x3ff>;
-#endif
+&i2c0 {
+	thermal: thermal@4c {
+		compatible = "national,lm90";
+		reg = <0x4c>;
+		#thermal-sensor-cells = <1>;
+	};
 };
