--- a/arch/arm64/boot/dts/broadcom/stingray/custom/bcm958808ce/bcm958808ce.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray/custom/bcm958808ce/bcm958808ce.dts
@@ -32,86 +32,21 @@
 
 /dts-v1/;
 
-#define NUM_CRYPTO	32
-#define NUM_RAID	8
 #define ENABLE_I2C0	1
-#define NUM_SATA	8
-
-#include "bcm958742-base.dtsi"
+#define ENABLE_I2C1	1
+#define ENABLE_SDCARD	1
+#define NUM_SATA	1
 
 / {
-	model = "Stingray SST100 (BCM958742T)";
+	model = "BCM958808CE";
 };
 
-&i2c0 {
-	pca9505: pca9505@20 {
-		interrupts = <111 1 1>;
-	};
-};
-
-&gphy0 {
-	enet-phy-lane-swap;
-};
+#include "../../stingray-board-base.dtsi"
 
 &sdio0 {
-	mmc-ddr-1_8v;
+	no-1-8-v;
 };
 
-&pcie0 {
-	msi-map = <0x0000 &gic_its 0x0000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0000 0x3ff>;
-#endif
-};
-
-&pcie1 {
-        msi-map = <0x0000 &gic_its 0x0400 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0400 0x3ff>;
-#endif
-};
-
-&pcie2 {
-        msi-map = <0x0000 &gic_its 0x0800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0800 0x3ff>;
-#endif
-};
-
-&pcie3 {
-        msi-map = <0x0000 &gic_its 0x0c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0c00 0x3ff>;
-#endif
-};
-
-&pcie4 {
-
-        msi-map = <0x0000 &gic_its 0x1000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1000 0x3ff>;
-#endif
-};
-&pcie5 {
-
-        msi-map = <0x0000 &gic_its 0x1400 0x3ff>;
-
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1400 0x3ff>;
-#endif
-};
-&pcie6 {
-
-        msi-map = <0x0000 &gic_its 0x1800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1800 0x3ff>;
-#endif
-};
-
-&pcie7 {
-
-        msi-map = <0x0000 &gic_its 0x1c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1c00 0x3ff>;
-#endif
+&sdio1 {
+	no-1-8-v;
 };
