--- a/arch/arm64/boot/dts/broadcom/stingray/emulator/stingray-pd-usb.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray/emulator/stingray-pd-usb.dts
@@ -1,7 +1,7 @@
 /*
  *  BSD LICENSE
  *
- *  Copyright(c) 2017 Broadcom.  All rights reserved.
+ *  Copyright(c) 2016-2017 Broadcom.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions
@@ -32,86 +32,45 @@
 
 /dts-v1/;
 
-#define NUM_CRYPTO	32
-#define NUM_RAID	8
-#define ENABLE_I2C0	1
-#define NUM_SATA	8
+#define ENABLE_USB0	1
+#define ENABLE_USB1	1
 
-#include "bcm958742-base.dtsi"
+/* HACK: Reserve initrd location
+ * The memreserve entry for initrd is supposed
+ * to be updated in DTB by bootloader before
+ * handing over DTB to Linux kernel.
+ */
+/memreserve/ 0x81000000 0x00800000;
+/* HACK: Reserve bl31 location
+ * The memreserve entry for bl31 is supposed to
+ * be updated in DTB by bootloader before handing
+ * over DTB to Linux kernel. This is so because
+ * only firmware (or bootloader) know the correct
+ * location of bl31 and bl31 location in DDR can
+ * also change in-future.
+ */
+/memreserve/ 0x8f000000 0x00100000;
+
+#include "./stingray-pd-base.dtsi"
 
 / {
-	model = "Stingray SST100 (BCM958742T)";
-};
+	model = "Broadcom Stingray Palladium";
 
-&i2c0 {
-	pca9505: pca9505@20 {
-		interrupts = <111 1 1>;
+	chosen { /* HACK: hard-code kernel args and initrd location */
+		bootargs = "root=/dev/ram rw console=ttyS1,4800n8 \
+			    earlycon=uart8250,mmio32,0x68a10000 cma=64M \
+			    maxcpus=2";
+		linux,stdout-path = "/soc/uart@68a30000:4800n8";
+		linux,initrd-start = <0x0 0x81000000>;
+		linux,initrd-end = <0x0 0x81800000>;
 	};
 };
 
-&gphy0 {
-	enet-phy-lane-swap;
-};
-
-&sdio0 {
-	mmc-ddr-1_8v;
-};
-
-&pcie0 {
-	msi-map = <0x0000 &gic_its 0x0000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0000 0x3ff>;
-#endif
-};
-
-&pcie1 {
-        msi-map = <0x0000 &gic_its 0x0400 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0400 0x3ff>;
-#endif
-};
-
-&pcie2 {
-        msi-map = <0x0000 &gic_its 0x0800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0800 0x3ff>;
-#endif
-};
-
-&pcie3 {
-        msi-map = <0x0000 &gic_its 0x0c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0c00 0x3ff>;
-#endif
-};
-
-&pcie4 {
-
-        msi-map = <0x0000 &gic_its 0x1000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1000 0x3ff>;
-#endif
-};
-&pcie5 {
-
-        msi-map = <0x0000 &gic_its 0x1400 0x3ff>;
-
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1400 0x3ff>;
-#endif
-};
-&pcie6 {
-
-        msi-map = <0x0000 &gic_its 0x1800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1800 0x3ff>;
-#endif
-};
-
-&pcie7 {
-
-        msi-map = <0x0000 &gic_its 0x1c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1c00 0x3ff>;
-#endif
+&uart1 {
+	/* Hack: For palladium we force DLL=1 and DLM=0.
+	 * To achieve this, we set:
+	 * clock-frequency = <desired_baudrate> x 16
+	 */
+	clock-frequency = <76800>;
+	status = "okay";
 };
