--- a/arch/arm64/boot/dts/broadcom/stingray/stingray-optee.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray-optee.dtsi
@@ -1,7 +1,7 @@
 /*
  *  BSD LICENSE
  *
- *  Copyright(c) 2017 Broadcom.  All rights reserved.
+ *  Copyright(c) 2016-2017 Broadcom.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions
@@ -29,89 +29,15 @@
  *  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  *  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+#ifndef ENABLE_OPTEE
+#define ENABLE_OPTEE	0
+#endif
 
-/dts-v1/;
-
-#define NUM_CRYPTO	32
-#define NUM_RAID	8
-#define ENABLE_I2C0	1
-#define NUM_SATA	8
-
-#include "bcm958742-base.dtsi"
-
-/ {
-	model = "Stingray SST100 (BCM958742T)";
-};
-
-&i2c0 {
-	pca9505: pca9505@20 {
-		interrupts = <111 1 1>;
+#if (ENABLE_OPTEE == 1)
+	firmware {
+		optee {
+			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
 	};
-};
-
-&gphy0 {
-	enet-phy-lane-swap;
-};
-
-&sdio0 {
-	mmc-ddr-1_8v;
-};
-
-&pcie0 {
-	msi-map = <0x0000 &gic_its 0x0000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0000 0x3ff>;
 #endif
-};
-
-&pcie1 {
-        msi-map = <0x0000 &gic_its 0x0400 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0400 0x3ff>;
-#endif
-};
-
-&pcie2 {
-        msi-map = <0x0000 &gic_its 0x0800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0800 0x3ff>;
-#endif
-};
-
-&pcie3 {
-        msi-map = <0x0000 &gic_its 0x0c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x0c00 0x3ff>;
-#endif
-};
-
-&pcie4 {
-
-        msi-map = <0x0000 &gic_its 0x1000 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1000 0x3ff>;
-#endif
-};
-&pcie5 {
-
-        msi-map = <0x0000 &gic_its 0x1400 0x3ff>;
-
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1400 0x3ff>;
-#endif
-};
-&pcie6 {
-
-        msi-map = <0x0000 &gic_its 0x1800 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1800 0x3ff>;
-#endif
-};
-
-&pcie7 {
-
-        msi-map = <0x0000 &gic_its 0x1c00 0x3ff>;
-#if (ENABLE_PAXB_IOMMU == 1)
-	iommu-map = <0x0000 &smmu 0x1c00 0x3ff>;
-#endif
-};
