--- a/arch/arm64/boot/dts/broadcom/stingray/stingray.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray.dtsi
@@ -32,11 +32,20 @@
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
+#ifndef ENABLE_PAXB_IOMMU
+#define ENABLE_PAXB_IOMMU	0
+#endif
+
+#ifndef ENABLE_IHOST12_CPUS
+#define ENABLE_IHOST12_CPUS	1
+#endif
+
 / {
 	compatible = "brcm,stingray";
 	interrupt-parent = <&gic>;
 	#address-cells = <2>;
 	#size-cells = <2>;
+	dma-ranges = <0x0 0x0 0x0 0x0 0x100 0x0>;
 
 	cpus {
 		#address-cells = <2>;
@@ -47,6 +56,12 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x0>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER0_L2>;
 		};
 
@@ -55,14 +70,26 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x1>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER0_L2>;
 		};
-
+#if (ENABLE_IHOST12_CPUS == 1)
 		cpu@100 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x100>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER1_L2>;
 		};
 
@@ -71,6 +98,12 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x101>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER1_L2>;
 		};
 
@@ -79,6 +112,12 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x200>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER2_L2>;
 		};
 
@@ -87,14 +126,26 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x201>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER2_L2>;
 		};
-
+#endif
 		cpu@300 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x300>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER3_L2>;
 		};
 
@@ -103,23 +154,41 @@
 			compatible = "arm,cortex-a72", "arm,armv8";
 			reg = <0x0 0x301>;
 			enable-method = "psci";
+			i-cache-size = <0xc000>;
+			i-cache-line-size = <64>;
+			i-cache-sets = <256>;
+			d-cache-size = <0x8000>;
+			d-cache-line-size = <64>;
+			d-cache-sets = <256>;
 			next-level-cache = <&CLUSTER3_L2>;
 		};
 
 		CLUSTER0_L2: l2-cache@0 {
 			compatible = "cache";
+			cache-size = <0x200000>;
+			cache-line-size = <64>;
+			cache-sets = <2048>;
 		};
-
+#if (ENABLE_IHOST12_CPUS == 1)
 		CLUSTER1_L2: l2-cache@100 {
 			compatible = "cache";
+			cache-size = <0x200000>;
+			cache-line-size = <64>;
+			cache-sets = <2048>;
 		};
 
 		CLUSTER2_L2: l2-cache@200 {
 			compatible = "cache";
+			cache-size = <0x200000>;
+			cache-line-size = <64>;
+			cache-sets = <2048>;
 		};
-
+#endif
 		CLUSTER3_L2: l2-cache@300 {
 			compatible = "cache";
+			cache-size = <0x200000>;
+			cache-line-size = <64>;
+			cache-sets = <2048>;
 		};
 	};
 
@@ -145,6 +214,8 @@
 			     <GIC_PPI 11 IRQ_TYPE_LEVEL_LOW>,
 			     <GIC_PPI 10 IRQ_TYPE_LEVEL_LOW>;
 	};
+
+	#include "stingray-pcie.dtsi"
 
 	mhb: syscon@60401000 {
 		compatible = "brcm,sr-mhb", "syscon";
@@ -186,6 +257,14 @@
 			compatible = "arm,mmu-500";
 			reg = <0x03000000 0x80000>;
 			#global-interrupts = <1>;
+			/* reserve gic-its (@63c20000 + its translater) */
+			#region-address-cells = <1>;
+			#region-size-cells = <1>;
+			reserved-msi-region = <0x0 0x1a 0x63c30000 0x8000>;
+#if (ENABLE_PAXC_IOMMU == 0)
+			reserved-context-banks = <1>;
+			reserved-mapping-groups = <8>;
+#endif
 			interrupts = <GIC_SPI 704 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 711 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 712 IRQ_TYPE_LEVEL_HIGH>,
@@ -248,9 +327,11 @@
 				     <GIC_SPI 769 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 770 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 771 IRQ_TYPE_LEVEL_HIGH>,
-				     <GIC_SPI 772 IRQ_TYPE_LEVEL_HIGH>,
-				     <GIC_SPI 773 IRQ_TYPE_LEVEL_HIGH>,
-				     <GIC_SPI 774 IRQ_TYPE_LEVEL_HIGH>;
+				     <GIC_SPI 772 IRQ_TYPE_LEVEL_HIGH>
+#if (ENABLE_PAXC_IOMMU == 1)
+				     ,<GIC_SPI 773 IRQ_TYPE_LEVEL_HIGH>
+#endif
+					;
 			#iommu-cells = <2>;
 		};
 	};
@@ -275,6 +356,12 @@
 			reg = <0x0001d000 0x400>;
 		};
 
+		mailbox: mailbox@24024 {
+			compatible = "brcm,iproc-mailbox";
+			reg = <0x00024024 0x8>;
+			#mbox-cells = <1>;
+		};
+
 		gpio_crmu: gpio@24800 {
 			compatible = "brcm,iproc-gpio";
 			reg = <0x00024800 0x4c>;
@@ -286,10 +373,12 @@
 
 	#include "stingray-fs4.dtsi"
 	#include "stingray-sata.dtsi"
-	#include "stingray-pcie.dtsi"
+	#include "stingray-usb.dtsi"
+	#include "stingray-optee.dtsi"
 
 	hsls {
 		compatible = "simple-bus";
+		dma-ranges;
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges = <0x0 0x0 0x68900000 0x17700000>;
@@ -301,29 +390,20 @@
 			reg = <0x00020000 0x250>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-
-			mdio@0 { /* PCIe serdes */
-				reg = <0x0>;
-				#address-cells = <1>;
-				#size-cells = <0>;
-			};
+			status = "disabled";
 
 			mdio@2 { /* SATA */
 				reg = <0x2>;
 				#address-cells = <1>;
 				#size-cells = <0>;
+				status = "disabled";
 			};
 
-			mdio@3 { /* USB */
-				reg = <0x3>;
-				#address-cells = <1>;
-				#size-cells = <0>;
-			};
-
-			mdio@10 { /* RGMII */
+			mdio@10 { /* SGMII */
 				reg = <0x10>;
 				#address-cells = <1>;
 				#size-cells = <0>;
+				status = "disabled";
 			};
 		};
 
@@ -335,6 +415,7 @@
 			status = "disabled";
 		};
 
+		/* Don't use this timer it is being used by ATF */
 		timer0: timer@30000 {
 			compatible = "arm,sp804", "arm,primecell";
 			reg = <0x00030000 0x1000>;
@@ -448,6 +529,7 @@
 			#gpio-cells = <2>;
 			gpio-controller;
 			interrupt-controller;
+			#interrupt-cells = <2>;
 			interrupts = <GIC_SPI 183 IRQ_TYPE_LEVEL_HIGH>;
 			gpio-ranges = <&pinmux 0 0 16>,
 					<&pinmux 16 71 2>,
@@ -521,7 +603,7 @@
 			status = "disabled";
 		};
 
-		ssp0: ssp@180000 {
+		ssp0: spi@180000 {
 			compatible = "arm,pl022", "arm,primecell";
 			reg = <0x00180000 0x1000>;
 			interrupts = <GIC_SPI 187 IRQ_TYPE_LEVEL_HIGH>;
@@ -533,7 +615,7 @@
 			status = "disabled";
 		};
 
-		ssp1: ssp@190000 {
+		ssp1: spi@190000 {
 			compatible = "arm,pl022", "arm,primecell";
 			reg = <0x00190000 0x1000>;
 			interrupts = <GIC_SPI 188 IRQ_TYPE_LEVEL_HIGH>;
@@ -592,6 +674,26 @@
 			status = "disabled";
 		};
 
+		qspi: spi@370200 {
+			compatible = "brcm,spi-iproc-qspi-v1",
+				     "brcm,spi-bcm-qspi";
+			reg = <0x00370200 0x184>,
+				<0x00370000 0x124>,
+				<0x0050c408 0x004>,
+				<0x003703a0 0x01c>;
+			reg-names = "mspi", "bspi", "intr_regs",
+				"intr_status_reg";
+			interrupts = <GIC_SPI 202 IRQ_TYPE_LEVEL_HIGH>;
+			interrupt-names = "spi_l1_intr";
+			clocks = <&hsls_div4_clk>;
+			clock-names = "qspi_clk";
+			clock-frequency = <175000000>;
+			num-cs = <2>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+		};
+
 		sdio0: sdhci@3f1000 {
 			compatible = "brcm,sdhci-iproc";
 			reg = <0x003f1000 0x100>;
@@ -612,4 +714,122 @@
 			status = "disabled";
 		};
 	};
+
+	rtc: rtc {
+		compatible = "brcm,iproc-rtc";
+		interrupts = <GIC_SPI 219 IRQ_TYPE_EDGE_RISING>;
+		status = "disabled";
+	};
+
+	tmons {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges = <0x0 0x0 0x8f100000 0x100>;
+
+		tmon: tmon@0 {
+			compatible = "brcm,sr-thermal";
+			reg = <0x0 0x40>;
+			brcm,tmon-mask = <0x3f>;
+			#thermal-sensor-cells = <1>;
+		};
+	};
+
+	thermal-zones {
+		ihost0_thermal: ihost0-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 0>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+
+		ihost1_thermal: ihost1-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 1>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+
+		ihost2_thermal: ihost2-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 2>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+
+		ihost3_thermal: ihost3-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 3>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+
+		crmu_thermal: crmu-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 4>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+
+		nitro_thermal: nitro-thermal {
+			polling-delay-passive = <0>;
+			polling-delay = <1000>;
+			thermal-sensors = <&tmon 5>;
+			trips {
+				cpu-crit {
+					temperature = <105000>;
+					hysteresis = <0>;
+					type = "critical";
+				};
+			};
+		};
+	};
+
+	nic-hsls {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges = <0x0 0x0  0x0 0xffffffff>;
+
+		nic_i2c0: i2c@60826100 {
+			compatible = "brcm,iproc-nic-i2c";
+			reg = <0x60826100 0x100>,
+			      <0x60e00408 0x1000>;
+			brcm,ape-hsls-addr-mask = <0x03400000>;
+			clock-frequency = <100000>;
+			status = "disabled";
+		};
+	};
 };
+
+#include "stingray-pcie-msi-map.dtsi"
